--- a/app/src/main/res/layout/activity_menue_auswahl.xml
+++ b/app/src/main/res/layout/activity_menue_auswahl.xml
@@ -22,8 +22,7 @@
         android:id="@+id/auswahl"
         style="@style/TextAppearance.AppCompat"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="\nBitte wählen Sie die Anzahl der Pizzen aus"/>
+        android:layout_height="wrap_content" />
 
     <NumberPicker
         android:layout_width="wrap_content"
