--- a/app/src/main/res/layout/activity_menue.xml
+++ b/app/src/main/res/layout/activity_menue.xml
@@ -9,7 +9,7 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="556dp"
+        android:layout_height="540dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:divider="@color/black"
             android:orientation="vertical"
-            android:showDividers="middle" />
+            android:showDividers="middle|beginning|end" />
     </ScrollView>
 
     <Button
@@ -87,9 +87,7 @@
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonReservation"
-        app:layout_constraintVertical_bias="0.719" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonBestellung"
