--- a/app/src/main/res/layout/activity_benutzer_angemeldet.xml
+++ b/app/src/main/res/layout/activity_benutzer_angemeldet.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:onClick="profile"
-        android:text="Profil"
+        android:text="Profil bearbeiten"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonBestellungsverlauf" />
