--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,7 +70,7 @@
         android:layout_marginEnd="7dp"
         android:layout_marginRight="7dp"
         android:layout_marginBottom="24dp"
-        android:text="Benutzername:"
+        android:text="Email:"
         app:layout_constraintBottom_toTopOf="@+id/textViewLPw"
         app:layout_constraintEnd_toStartOf="@+id/lUsernameInput"
         app:layout_constraintStart_toStartOf="parent"
